# MtuciTasks.v.1.5

CMakeProject4/: CMakeLists.txt
CMakeProject4/Laba1/: CMakeLists.txt
CMakeProject4/Laba1/Task1/: CMakeLists.txt  Task1.c
CMakeProject4/Laba1/Task2/: CMakeLists.txt  Task2.c
CMakeProject4/Laba1/Task3/: CMakeLists.txt  Task3.c
CMakeProject4/Laba1/Task4/: CMakeLists.txt  Task4.c
CMakeProject4/Laba1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
CMakeProject4/Laba1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
CMakeProject4/Laba1/Task7/: CMakeLists.txt  Task7_func.c  Task7_main.c  func.h
CMakeProject4/Laba1/Task8/: CMakeLists.txt
CMakeProject4/Laba2/: CmakeLists.txt
CMakeProject4/Laba2/Task2.1/: CMakeLists.txt
CMakeProject4/Laba2/Task2.1/include/: func.h
CMakeProject4/Laba2/Task2.1/src_exe/: CMakeLists.txt  main1.c
CMakeProject4/Laba2/Task2.1/src_lib_1/: CMakeLists.txt  f1.c
CMakeProject4/Laba2/Task2.1/src_lib_2/: CMakeLists.txt  f2.c
CMakeProject4/Laba3/: CMakeLists.txt
CMakeProject4/Laba3/Laba3.1/: CMakeLists.txt
CMakeProject4/Laba3/Laba3.1/Include/: f.h
CMakeProject4/Laba3/Laba3.1/src_exe/: CMakeLists.txt  main.c
CMakeProject4/Laba3/Laba3.1/src_lib_do_while/: CMakeLists.txt  func.c
CMakeProject4/Laba3/Laba3.1/src_lib_for/: CMakeLists.txt  func.c
CMakeProject4/Laba3/Laba3.1/src_lib_while/: CMakeLists.txt  func.c
CMakeProject4/Laba4/: CMakeLists.txt
CMakeProject4/Laba4/Laba4.1/: CMakeLists.txt
CMakeProject4/Laba4/Laba4.1/Includes/: f.h
CMakeProject4/Laba4/Laba4.1/src_exe/: CMakeLists.txt  main.c
CMakeProject4/Laba4/Laba4.1/src_lib_array/: CMakeLists.txt  readArray.c  sort.c  sortStackArray.c  writeArray.c
CMakeProject4/Laba4/Laba4.1/src_lib_task1/: CMakeLists.txt  lib_task1.c
CMakeProject4/Laba5/: CMakeLists.txt
CMakeProject4/Laba5/Laba5.1/: CMakeLists.txt
CMakeProject4/Laba5/Laba5.1/Includes/: func.h
CMakeProject4/Laba5/Laba5.1/src_exe/: CMakeLists.txt  main.c
CMakeProject4/Laba5/Laba5.1/src_lib/: CMakeLists.txt  delete.c  find.c  insert.c  strcat.c  strcpy.c  strlen.c
CMakeProject4/Laba6/: CMakeLists.txt
CMakeProject4/Laba6/Laba6.1/: CMakeLists.txt  main.c
CMakeProject4/Laba7/: CMakeLists.txt
CMakeProject4/Laba7/Laba7.1/: CMakeLists.txt
CMakeProject4/Laba7/Laba7.1/Task1/: CMakeLists.txt
CMakeProject4/Laba7/Laba7.1/Task1/Includes/: func.h
CMakeProject4/Laba7/Laba7.1/Task1/src_exe/: CMakeLists.txt  main.c
CMakeProject4/Laba7/Laba7.1/Task1/src_lib/: CMakeLists.txt  func.c
CMakeProject4/Laba7/Laba7.1/Task2/Includes/: func.h
CMakeProject4/Laba7/Laba7.1/Task2/src_exe/: CMakeLists.txt  main.c
CMakeProject4/Laba7/Laba7.1/Task2/src_lib/: CMakeLists.txt  readArray.c  sort.c  sortHeapArray.c  writeArray.c
CMakeProject4/Laba7/Laba7.1/Task3/: CMakeLists.txt
CMakeProject4/Laba7/Laba7.1/Task3/Includes/: f.h
CMakeProject4/Laba7/Laba7.1/Task3/src_exe/: CMakeLists.txt  main.c
(+6 files in other folders)
