# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeProject4")

# Включите подпроекты.
add_subdirectory ("Laba1")
add_subdirectory ("Laba2")
add_subdirectory ("Laba3")
add_subdirectory ("Laba4")
add_subdirectory ("Laba5")
add_subdirectory ("Laba6")
add_subdirectory ("Laba7")