# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("Laba1")

# Включите подпроекты.
add_subdirectory ("Task1")
add_subdirectory ("Task2")
add_subdirectory ("Task3")
add_subdirectory ("Task4")
add_subdirectory ("Task5")
add_subdirectory ("Task6")
add_subdirectory ("Task7")
add_subdirectory ("Task8")